nav menu gap fixed

--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ z-index:1000;
 
 .nav-menu{
     display:flex;
-    gap:3px;
+    gap:30px;
 }
 
 .nav-menu a{
